fixed res confirmation abbenr on mobile

--- a/src/styles/components/user-messages.less
+++ b/src/styles/components/user-messages.less
@@ -14,6 +14,11 @@ user-messages {
   top: 88px;
   z-index: 998;
 
+  .viewport-mobile &{
+    position: relative;
+    top: 0;
+  }
+
   li {
     position: relative;
     padding: @baseline / 2;
