--- a/src/targets/sandman/styles/views/reservation.less
+++ b/src/targets/sandman/styles/views/reservation.less
@@ -658,6 +658,10 @@ reservation-finished {
 
   margin-top: 120px;
 
+  .viewport-mobile &{
+    margin-top: 0px;
+  }
+
 
   // This part is specific for RESERVATION DETAIL page only
   .reservation-summary {
